Fix java languange version errors