@@ -37,7 +37,7 @@ public class Deck implements Serializable {
      * @return the top card in the deck
      */
     public Card getTopCard() {
-        return cards.getLast();
+        return cards.get(cards.size() - 1);
     }
 
     /**
@@ -46,7 +46,7 @@ public class Deck implements Serializable {
      * @return top card
      */
     public Card removeCard() {
-        return cards.removeLast();
+        return cards.remove(cards.size() - 1);
     }
 
     /**
